--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.16.1",
     "express-partials": "*",
     "http-errors": "~1.6.3",
+    "mongoose": "^5.10.6",
     "morgan": "~1.9.1"
   }
 }
