--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-partials": "*",
     "http-errors": "~1.6.3",
     "mongoose": "^5.10.6",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "request": "^2.88.2"
   }
 }
