--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "lab2",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
-  "dependencies": {
-    "bootstrap": "^4.5.2",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "ejs": "~2.6.1",
-    "express": "~4.16.1",
-    "express-partials": "*",
-    "http-errors": "~1.6.3",
-    "mongoose": "^5.10.6",
-    "morgan": "~1.9.1",
-    "request": "^2.88.2"
-  }
+    "name": "lab2",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "start": "node ./bin/www"
+    },
+    "dependencies": {
+        "bootstrap": "^4.5.2",
+        "cookie-parser": "~1.4.4",
+        "debug": "~2.6.9",
+        "dotenv": "^1.2.0",
+        "ejs": "~2.6.1",
+        "express": "^4.17.1",
+        "express-jwt": "^3.0.1",
+        "http-errors": "~1.6.3",
+        "mongoose": "^5.10.9",
+        "morgan": "^1.10.0",
+        "passport": "^0.2.2",
+        "passport-local": "^1.0.0",
+        "request": "^2.51.0"
+    }
 }
